Add ZAR currency display with fixed exchange rate (cd "/Users/danielmotzouris/Documents/Curser Projects/Reachmax Calc" && git add . && git commit -m "Add ZAR currency display with fixed exchange rate ($1 = R18)" = R18)

--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
         <!-- Total Price Display -->
         <div class="total-section">
             <div class="total-label">Total Cost</div>
-            <div class="total-price" id="totalPrice">$1,000.00</div>
+            <div class="total-price" id="totalPrice">$1,052.50</div>
+            <div class="total-price-zar" id="totalPriceZAR">R18,945.00</div>
+            <div class="exchange-rate-note">Exchange rate: $1 = R18</div>
         </div>
 
         <!-- Pricing Breakdown -->
