--- a/index.html
+++ b/index.html
@@ -58,20 +58,29 @@
                 </div>
             </div>
 
-            <!-- Message Type Selector -->
-            <div class="input-section">
-                <label class="section-label">Message Type</label>
-                <div class="toggle-container">
-                    <button class="toggle-btn active" data-type="marketing" data-rate="0.04">
-                        <span class="toggle-title">Marketing</span>
-                        <span class="toggle-rate">$0.04 per message</span>
-                    </button>
-                    <button class="toggle-btn" data-type="utility" data-rate="0.008">
-                        <span class="toggle-title">Utility</span>
-                        <span class="toggle-rate">$0.008 per message</span>
-                    </button>
-                </div>
-            </div>
+                    <!-- Message Type Selector -->
+                    <div class="input-section">
+                        <label class="section-label">Message Type</label>
+                        <div class="toggle-container">
+                            <button class="toggle-btn active" data-type="marketing" data-rate="0.04">
+                                <span class="toggle-title">Marketing</span>
+                                <span class="toggle-rate">$0.04 per message</span>
+                            </button>
+                            <button class="toggle-btn" data-type="utility" data-rate="0.008">
+                                <span class="toggle-title">Utility</span>
+                                <span class="toggle-rate">$0.008 per message</span>
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Own META Account Checkbox -->
+                    <div class="input-section">
+                        <label class="checkbox-container">
+                            <input type="checkbox" id="ownMetaAccountCheckbox" class="meta-checkbox">
+                            <span class="checkbox-label">Client will use their own META account</span>
+                            <span class="checkbox-note">(Message costs excluded from total)</span>
+                        </label>
+                    </div>
 
                     <!-- Reachmax Platform Fee Display -->
                     <div class="platform-fee-section">
