Reduce spacing throughout and add META admin fee (--.02/message) when not using own account

--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
                             <span>Message Cost:</span>
                             <span id="messageCost">$1,000.00</span>
                         </div>
+                        <div class="breakdown-row" id="metaAdminFeeRow">
+                            <span>META Admin Fee:</span>
+                            <span id="metaAdminFeeBreakdown">$500.00</span>
+                        </div>
                         <div class="breakdown-row">
                             <span>Reachmax Platform Fee:</span>
                             <span id="platformFeeBreakdown">$37.50</span>
