Make checkbox section display on single line to save space

--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
                     <div class="input-section">
                         <label class="checkbox-container">
                             <input type="checkbox" id="ownMetaAccountCheckbox" class="meta-checkbox">
-                            <span class="checkbox-label">Client will use their own META account</span>
-                            <span class="checkbox-note">(Message costs excluded from total)</span>
+                            <span class="checkbox-label">
+                                Client will use their own META account
+                                <span class="checkbox-note">(Message costs excluded from total)</span>
+                            </span>
                         </label>
                     </div>
 
