Change META admin fee to 10% of message cost instead of flat rate per message

--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                             <span id="messageCost">$1,000.00</span>
                         </div>
                         <div class="breakdown-row" id="metaAdminFeeRow">
-                            <span>META Admin Fee:</span>
-                            <span id="metaAdminFeeBreakdown">$500.00</span>
+                            <span>META Admin Fee (10%):</span>
+                            <span id="metaAdminFeeBreakdown">$100.00</span>
                         </div>
                         <div class="breakdown-row">
                             <span>Reachmax Platform Fee:</span>
